added chum data to correlation plot in case study chapter of Guidelines WP

--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -1036,6 +1036,17 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\3UUWMDJ4\\Pestal et al. - Méthodes mises à jour pour l’évaluation des règles.pdf}
 }
 
+@article{petermanPatternsCovariationSurvival1998,
+  title = {Patterns of Covariation in Survival Rates of {{British Columbian}} and {{Alaskan}} Sockeye Salmon ({{Oncorhynchus}} Nerka) Stocks},
+  author = {Peterman, Randall M and Pyper, Brian J and Lapointe, Michael F and Adkison, Milo D and Walters, Carl J},
+  year = {1998},
+  volume = {55},
+  pages = {15},
+  abstract = {We used a multi-stock comparison to identify spatial and temporal characteristics of environmentally driven sources of variability across four decades in the productivity of 29 sockeye salmon (Oncorhynchus nerka) stocks from British Columbia (B.C.) and Alaska. We examined patterns of covariation among indices of survival rate (residuals from the best-fit stock-recruitment curve) and found positive covariation among Fraser River sockeye stocks (southern B.C.) and, to a greater extent, among Bristol Bay stocks (western Alaska) but no evidence of covariation between these two regions or with stocks of other regions in B.C. and Alaska. This indicates that important environmental processes affecting variation in sockeye survival rate from spawners to recruits operate at regional spatial scales, rather than at the larger, ocean-basin scale. The observed covariation in survival rates of Bristol Bay stocks appears to be due to a combination of both freshwater and, to a greater degree, marine processes. Bristol Bay sockeye stocks showed a dramatic and persistent increase in survival rates coinciding with the abrupt changes in the North Pacific environment in the mid-1970s; however, there was little evidence of a similar response for Fraser River stocks.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\97A6QMJ8\\Peterman et al. - 1998 - Patterns of covariation in survival rates of Briti.pdf}
+}
+
 @article{petermanWidespreadDecreaseProductivity2012,
   title = {A Widespread Decrease in Productivity of Sockeye Salmon ({{Oncorhynchus}} Nerka) Populations in Western {{North America}}},
   author = {Peterman, Randall M and Dorner, Brigitte},
@@ -1135,6 +1146,16 @@
   month = jan,
   publisher = {{Oxford University Press}},
   abstract = {Open access (or the " tragedy of the commons ") is a well-known explanation of fish stock depletion and of overcapacity. This chapter focuses on the complexity of proper management of the commons, specifically, policies to control total allowable catch (TAC) and total harvesting capacity: what are the major challenges, why is it easy for policy makers to misperceive, and how can communication be improved to ensure more rapid learning? Section 45.2 deals with the problem of overcapacity and resource depletion in the process of adapting fishing industries to resource limits. Section 45.3 considers " steady-state " strategies for controlling TAC and total capacity in fisheries with environmental variation. Section 45.4 deals with implications of assessment error for steady-state policies. Finally, section 45.5 discusses boundaries of models and methods and calls for balanced interdisciplinary analysis, and section 45.6 concludes.}
+}
+
+@article{pyperSpatialCovariationSurvival2002,
+  title = {Spatial {{Covariation}} in {{Survival Rates}} of {{Northeast Pacific Chum Salmon}}},
+  author = {Pyper, Brian J and Mueter, Franz J and Peterman, Randall M and Blackbourn, David J and Wood, Chris C},
+  year = {2002},
+  pages = {21},
+  abstract = {Using indices of survival rate (residuals from stock\textendash recruitment relationships) across four decades, we examined the spatial patterns of covariation among 40 wild and 27 hatchery stocks of chum salmon Oncorhynchus keta from 15 geographical regions in Washington, British Columbia, and Alaska. We found strong evidence of positive covariation among spawner-to-recruit survival rates of wild stocks within regions and between certain adjacent regions (e.g., correlations from 0.3 to 0.7) but little evidence of covariation between stocks of distant regions (e.g., separated by 1,000 km or more). Similarly, for hatchery stocks from Washington, British Columbia, and southeast Alaska, positive covariation in the indices of fry-to-recruit survival rate occurred only within regions and between certain adjacent regions. These patterns suggest that important environmental processes affecting interannual variation in spawner-to-recruit survival rates of chum salmon operate at local or regional spatial scales rather than at the larger, ocean-basin scale. These results are similar to our previous findings for sockeye salmon O. nerka and pink salmon O. gorbuscha and help identify the spatial characteristics of environmental variables required to improve forecasting models and better understand the effects of climatic changes on salmon productivity. Our finding that local or regional-scale processes primarily affect productivity differs from that of other studies, which suggest that large, ocean-basin-scale processes predominate. However, the latter studies were mostly based on time series of aggregate catch data, which provide limited spatial resolution and are potentially confounded by several factors.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\4YHUQQCM\\Pyper et al. - Spatial Covariation in Survival Rates of Northeast.pdf}
 }
 
 @article{reidTwoEyedSeeingIndigenous2020,
