--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -650,9 +650,10 @@ knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 ## DISCUSSION
 
 
-<!--BC: Consider starting discussion with a single paragraph that summarizes key take homes from this section. -->
-<!-- This is a solid set of discussion points. Not sure if this is the right place but might also recap insights gleaned from exploration of multidimensional approach and its utility in this context? -->
+<!--BC: Consider starting discussion with a single paragraph that summarizes key take homes from this section. 
+ This is a solid set of discussion points. Not sure if this is the right place but might also recap insights gleaned from exploration of multidimensional approach and its utility in this context? -->
 
+<!--CW: I started translating the discussion points into paragraphs below -->
 
 The Interior Fraser Coho SMU is considered a data-rich SMU as it has full stock-recruits time series for all five CUs within the SMU, which allowed for the estimation of abundance-based benchmarks (S\textsubscript{gen}). When considering the proportion-based LRPs, comparisons between single metric benchmark (S\textsubscript{gen}) and the Pacific Salmon Status Scanner yielded similar results. This occurs because the Pacific Salmon Status Scanner relies on S\textsubscript{gen} benchmarks when those are available. Exceptions occur if the estimated S\textsubscript{gen} are below the absolute threshold of 1500 spawners, as ocurred for the Frase Canyon CU. 
 
@@ -662,6 +663,12 @@ This Interior Fraser Coho SMU has a long history of using aggregate abundance-ba
 Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs. Comparisons between the abundance-based methods and the proportional methods yielded mixed results. Status was generally consistent for the scenarios in which the Ricker_priorCap model was used, but diverged more for the Ricker and IFCRT methods. The proportion-based methods tend to get triggered more often in years 2000-2001 and 2015-2017, when abundance of individual CU's are low. Whereas the Aggregate abundance-based methods tend to get triggered ore often in years 2006-2007, the lowest aggregate abundance generational averages for the time-series. 
 
 
+Most methods evaluated for the Interior Frase coho case study relied on the evaluation of CU status relative to S\textsubscript{gen}. As a result, the method used to estimate S\textsubscript{gen} had a large impact on results. We used two different approaches for estimating S\textsubscript{gen}: a Ricker model ( base Ricker) and a ricker mode with an informative prior on S\textsubscript{REP} (Ricker_priorCap). S\textsubscript{gen} estimates were higher for the Ricker_priorCap model compared to the base Ricker model, which meant that LRPs were more frequently triggered under this formulation. This pattern was observed for all four methods that relied on the Ricker_priorCap S\textsubscript{gen} estimates.
+
+ We considered alternative Ricker models for Interior Fraser Coho  to represent different assumptions regarding productivity trends in the stock. This approach has also been used in previous analyses for this SMU. @arbeiderInteriorFraserCoho2020 used a model averaging approach with three SR models equally weighted when assessing recovery potential for the Interior Fraser Coho SMU (the base Ricker and Ricker_priorCap models we used, as well as a third depensatory mortality version that we did not consider). @kormanEvaluationFrameworkAssessing2019 also considered multimple Ricker model formulations when estimating reference points for the Interior Fraser Coho SMU. They opted for choosing a preferred model, the base Ricker, instead of using model averaging approaches. 
+
+
+Implementation of LRPs when considerable uncertainty in underlying model structure exists will require methods to integrate estimates of LRP status over alternative model structures.  We demonstrate one approach when using projection-based estimates of aggregate abundance-based LRPs, in which we combine projections under each SR model scenario before calculating the LRP. This approach is basically a model averaging approach in which both scenarios are equally weighted.  However, other methods of assigning weights among model are possible. <!-- For example .... (TO DO: reference model selection / averaging papers from Carrie).  --> In other cases, such at the proportional approach using WSP assessments or the Pacific Salmon Status Scanner, uncertainty in model structure may require integration at earlier stages (i.e. when estimating biological benchmarks) or integration based on expert opinion.  For example, during the expert workshops that will be used to confirm Pacific Salmon Status Scanner status estimates, participants could be given two sets of status results based on two different Sgen models, and then be asked to converge on a single status estimate. <!--(can we pers. comm. Sue Grant as a reference for this process?). CW: I am not sure we want to give this example, I think it can be controversial and lead us on a off topic discussion --> 43
 
 
 
@@ -682,7 +689,7 @@ Discussion topic 2: How well do aggregate abundance-based LRPs perform retrospec
 
 - Our results highlight the complexities in predicting how well aggregate abundance-based LRPs will do at tracking proportion-based LRPs. <!--CW: this example is no longer true--> For example, when estimates of Sgen were obtained using the base Ricker model, proportion-based LRPs using Pacific Salmon Status Scanner status were more precautionary than the two aggregate abundance-based LRP options; especially in years 2015-2017. This result is partially a function of the different methods used to estimate CU status (rapid multidiensional scanning tool vs. single $S_{gen}$ metric) rather than the choice of proportion vs aggregate abundance approach. When aggregate abundance-based LRPs are compared to proportion-based LRPs using a single $S_{gen}$ metric, they are better aligned over this period. This result occurs because under thePacific Salmon Status Scanner, CUs can be above Sgen but still assessed as red status when their Sgen estimates are < 1500 spawners.
 
-- In comparison, when estimates of Sgen were obtained using the Ricker_priorCap model, which produced higher Sgen and LRP estimates than the Ricker model, both types of proportion-based LRPs were less precautionary than aggregate abundance-based LRPs. This result was especially pronounced when aggregate abundance-based LRPs were estimated using the projection-based LRP approach. LRP breaches using the Pacific Salmon Status Scanner with Ricker-priorCap estimates in earlier years (i.e., before 2015) were based CU abundance relative to $S_{gen}$, meaning that the two proportional methods were aligned. There were however additional years in which aggregate abundance LRPs were triggered but neither proportional LRP was. This pattern occurred when aggregate abundance dropped below abundance-based LRPs, but all CUs remained above red status based on CU-level abundances all being greater than $S_{gen}$. While this pattern occurred for both types of $S_{gen}$ estimates (Ricker and Ricker-priorCap), it was more common for the Ricker-priorCap model.
+- In comparison, when estimates of Sgen were obtained using the Ricker_priorCap model, which produced higher Sgen and LRP estimates than the Ricker model, both types of proportion-based LRPs were less precautionary than aggregate abundance-based LRPs. This result was especially pronounced when aggregate abundance-based LRPs were estimated using the projection-based LRP approach. LRP breaches using the Pacific Salmon Status Scanner with Ricker-priorCap estimates in earlier years (i.e., before 2015) were based CU abundance relative to $S_{gen}$, meaning that the two proportional methods were aligned. There were however additional years in which aggregate abundance LRPs were triggered but neither proportional LRP was. This pattern occurred when aggregate abundance dropped below abundance-based LRPs, but all CUs remained above red status based on CU-level abundances all being greater than $S_{gen}$. While this pattern occurred for both types of $S_{gen}$ estimates (Ricker and Ricker-priorCap), it was more common for the Ricker-priorCap model. 
 
 <!--
 KH (Nov 9): Is it ok to take out the following point since we have now explored it in the coho case study?  Or, is it worth including some of the following points still in the discussion??
